name:                urbit-airlock
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bsima/urbit-airlock#readme
license:             BSD3
license-file:        LICENSE
author:              Ben Sima
maintainer:          bsima@me.com
copyright:           2020 Ben Sima
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  default-language:    Haskell2010
  exposed-modules:
    Urbit.Airlock
  build-depends:
    base >= 4.7 && < 5,
    aeson,
    bytestring,
    lens,
    text,
    wai,
    wai-extra,
    wreq

executable urlock
  hs-source-dirs:      urlock
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    urbit-airlock
