name:                urbit-airlock
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bsima/urbit-airlock
license:             BSD3
license-file:        LICENSE
author:              Ben Sima
maintainer:          bsima@me.com
copyright:           2020 Ben Sima
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  default-language:    Haskell2010
  exposed-modules:
    Urbit.Airlock
  build-depends:
    base >= 4.7 && < 5,
    aeson,
    bytestring,
    lens,
    text,
    uuid,
    wai,
    wai-extra,
    wreq

-- executable urlock
--   hs-source-dirs:      .
--   main-is:             Main.hs
--   default-language:    Haskell2010
--   build-depends:
--     base >= 4.7 && < 5,
--     urbit-airlock
--
-- Test-Suite test-urbit-airlock
--   type: exitcode-stdio-1.0
--   main-is: test.hs
--   build-depends:
--     base >= 4.7 && < 5,
--     urbit-airlock
